--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,7 @@
 target 'CalendarDateRangePickerViewController_Example' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
-
+  pod 'CalendarDateRangePicker'
   # Pods for CalendarDateRangePickerViewController_Example
 
 end
